# opengl_test

./: .gitignore  CMakeLists.txt
Dependencies/include/glad/: glad.h
assets/shaders/: main_fragment.glsl  main_vertex.glsl
src/: Application.cpp  CMakeLists.txt  Shader.cpp  Shader.h
